# address-book-app

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
core/: config.py  exc.py  logging.py  mixins.py  models.py
infrastructure/: database.py
modules/address/: models.py  routers.py  schemas.py  services.py
tests/: conftest.py  test_addresses.py
